--- a/src/main/resources/it/polimi/ingsw/am52/waiting-view.fxml
+++ b/src/main/resources/it/polimi/ingsw/am52/waiting-view.fxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="nameLabel" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.am52.WaitingController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.am52.WaitingController">
    <children>
-      <Label layoutX="26.0" layoutY="23.0" text="Welcome" textFill="#1cb54c">
+      <Label fx:id="nameLabel" layoutX="26.0" layoutY="23.0" text="Welcome" textFill="#1cb54c">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <ListView fx:id="mylobbies" layoutX="182.0" layoutY="46.0" prefHeight="248.0" prefWidth="237.0" />
+      <Button layoutX="505.0" layoutY="22.0" mnemonicParsing="false" onAction="#newLobby" text="New Lobby" />
    </children>
 </AnchorPane>
