--- a/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/menu-view.fxml
+++ b/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/menu-view.fxml
@@ -4,7 +4,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" styleClass="background" stylesheets="@../css/menu-view.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.MenuViewController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="900.0" prefWidth="1500.0" styleClass="background"
+            stylesheets="@../css/menu-view.css" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.MenuViewController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
