--- a/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/chat-view.fxml
+++ b/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/chat-view.fxml
@@ -5,29 +5,19 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane fx:id="borderPane" prefHeight="629.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.ChatViewController">
+<BorderPane fx:id="borderPane" prefHeight="629.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.ChatViewController">
 <center>
     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-        <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308"
-                    maxWidth="1.7976931348623157E308" pannable="true" prefHeight="576.0" prefWidth="835.0"
-                    vbarPolicy="ALWAYS" vmin="1.0" vvalue="1.0" VBox.vgrow="ALWAYS">
-            <ListView fx:id="chatPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                      prefHeight="200.0" prefWidth="200.0"/>
+        <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" pannable="true" prefHeight="576.0" prefWidth="835.0" vbarPolicy="ALWAYS" vmin="1.0" vvalue="1.0" VBox.vgrow="ALWAYS">
+            <ListView fx:id="chatPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" />
         </ScrollPane>
-        <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
-              minWidth="100.0" VBox.vgrow="NEVER">
-            <TextArea fx:id="messageBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                      minHeight="-Infinity" minWidth="100.0" nodeOrientation="LEFT_TO_RIGHT"
-                      onKeyPressed="#sendMethod" prefHeight="16.0" prefWidth="698.0" promptText="Enter Message..."
-                      scaleShape="false" HBox.hgrow="ALWAYS">
+        <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="100.0" VBox.vgrow="NEVER">
+            <TextArea fx:id="messageBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="100.0" nodeOrientation="LEFT_TO_RIGHT" onKeyPressed="#sendMethod" prefHeight="16.0" prefWidth="698.0" promptText="Enter Message &quot;\w {playerName} {message}&quot; to whisper to {playerName}" scaleShape="false" HBox.hgrow="ALWAYS">
                 <font>
-                    <Font name="SansSerif Regular" size="14.0"/>
+                    <Font name="SansSerif Regular" size="14.0" />
                 </font>
             </TextArea>
-            <Button fx:id="buttonSend" alignment="CENTER" maxHeight="1.7976931348623157E308"
-                    maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                    mnemonicParsing="false" onAction="#sendButtonAction" prefHeight="43.0" prefWidth="140.0"
-                    scaleShape="false" text="Send" textAlignment="CENTER" HBox.hgrow="NEVER"/>
+            <Button fx:id="buttonSend" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendButtonAction" prefHeight="43.0" prefWidth="140.0" scaleShape="false" text="Send" textAlignment="CENTER" HBox.hgrow="NEVER" />
         </HBox>
     </VBox>
 </center>
