--- a/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/create-lobby.fxml
+++ b/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/create-lobby.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0"
-            prefWidth="1500.0" styleClass="background" stylesheets="@../css/menu-view.css"
-            xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="900.0" prefWidth="1500.0" styleClass="background"
+            stylesheets="@../css/menu-view.css" xmlns="http://javafx.com/javafx/17.0.2-ea"
             fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.CreateLobbyController">
    <padding>
       <Insets bottom="100.0" left="100.0" right="100.0" top="100.0"/>
