--- a/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/end-game.fxml
+++ b/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/end-game.fxml
@@ -4,7 +4,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="950.0" prefWidth="1561.0" styleClass="background" stylesheets="@../css/menu-view.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.EndGameController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="900.0" prefWidth="1500.0" styleClass="background"
+            stylesheets="@../css/menu-view.css" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.EndGameController">
    <Label fx:id="winnerLabel" alignment="CENTER" layoutX="255.0" layoutY="132.0" prefHeight="94.0" prefWidth="914.0" text="Winners">
       <font>
          <Font size="64.0" />
