--- a/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/opponent-board.fxml
+++ b/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/opponent-board.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 
-<AnchorPane prefHeight="629.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="629.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/21"
             fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.OpponentBardController">
    <ImageView fitHeight="629.0" fitWidth="782.0" layoutX="-7.0" pickOnBounds="true">
       <Image url="@../images/background/image.png"/>
