--- a/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/select-starter-card.fxml
+++ b/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/select-starter-card.fxml
@@ -5,7 +5,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="900.0" prefWidth="1500.0" styleClass="background" stylesheets="@../css/menu-view.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.SelectStarterCardController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="900.0" prefWidth="1500.0" styleClass="background"
+            stylesheets="@../css/menu-view.css" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.SelectStarterCardController">
    <ImageView fx:id="frontStarterCard" fitHeight="230.0" fitWidth="427.0" layoutX="284.0" layoutY="350.0" onMouseClicked="#setSelected" pickOnBounds="true" preserveRatio="true">
       <Image url="@../images/cards/backs/102.png" />
    </ImageView>
