--- a/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/playing-board.fxml
+++ b/src/main/resources/it/polimi/ingsw/am52/view/gui/fxml/playing-board.fxml
@@ -5,91 +5,119 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="900.0" prefWidth="1550.0" styleClass="background"
-            stylesheets="@../css/menu-view.css" xmlns="http://javafx.com/javafx/17.0.2-ea"
-            fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.PlayingBoardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1550.0" styleClass="background" stylesheets="@../css/menu-view.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.am52.view.gui.guiControllers.PlayingBoardController">
     <rotationAxis>
         <Point3D />
     </rotationAxis>
     <ImageView fitHeight="629.0" fitWidth="782.0" layoutX="426.0" layoutY="44.0" pickOnBounds="true" AnchorPane.topAnchor="44.0">
         <Image url="@../images/background/image.png" />
     </ImageView>
-    <GridPane fx:id="playingBoardGrid" alignment="CENTER" gridLinesVisible="true" layoutX="469.0" layoutY="77.0" prefHeight="560.0" prefWidth="700.0">
-      <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      </columnConstraints>
-      <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-    </GridPane>
-    <ImageView fx:id="resourceCardsDeck" fitHeight="98.0" fitWidth="165.0" layoutX="23.0" layoutY="157.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
+    <ScrollPane hvalue="0.5" layoutX="458.0" layoutY="69.0" prefHeight="579.0" prefWidth="717.0" vvalue="0.5">
+        <GridPane fx:id="playingBoardGrid" alignment="CENTER" gridLinesVisible="true" layoutX="469.0" layoutY="77.0" prefHeight="867.0" prefWidth="1134.0">
+          <columnConstraints>
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          </columnConstraints>
+          <rowConstraints>
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+        </GridPane>
+    </ScrollPane>
+    <ImageView fx:id="resourceCardsDeck" fitHeight="98.0" fitWidth="165.0" layoutX="23.0" layoutY="123.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/cards/backs/1.png" />
     </ImageView>
-    <ImageView fx:id="playerCard1" fitHeight="98.0" fitWidth="165.0" layoutX="553.0" layoutY="739.0" onMouseClicked="#cardSelection" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="playerCard1" fitHeight="98.0" fitWidth="165.0" layoutX="532.0" layoutY="742.0" onMouseClicked="#cardSelection" pickOnBounds="true" preserveRatio="true">
         <rotationAxis>
             <Point3D />
         </rotationAxis>
         <Image url="@../images/cards/backs/1.png" />
     </ImageView>
-    <ImageView fx:id="playerCard2" fitHeight="98.0" fitWidth="165.0" layoutX="756.0" layoutY="742.0" onMouseClicked="#cardSelection" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="playerCard2" fitHeight="98.0" fitWidth="165.0" layoutX="725.0" layoutY="742.0" onMouseClicked="#cardSelection" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/cards/backs/11.png" />
     </ImageView>
-    <ImageView fx:id="playerCard3" fitHeight="98.0" fitWidth="165.0" layoutX="935.0" layoutY="737.0" onMouseClicked="#cardSelection" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="playerCard3" fitHeight="98.0" fitWidth="165.0" layoutX="916.0" layoutY="742.0" onMouseClicked="#cardSelection" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/cards/backs/21.png" />
     </ImageView>
-    <ImageView fx:id="visibleResourceCard1" fitHeight="98.0" fitWidth="165.0" layoutX="189.0" layoutY="98.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="visibleResourceCard1" fitHeight="98.0" fitWidth="165.0" layoutX="183.0" layoutY="62.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
         <rotationAxis>
             <Point3D />
         </rotationAxis>
         <Image url="@../images/cards/fronts/2.png" />
     </ImageView>
-    <ImageView fx:id="visibleResourceCard2" fitHeight="98.0" fitWidth="165.0" layoutX="183.0" layoutY="221.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="visibleResourceCard2" fitHeight="98.0" fitWidth="165.0" layoutX="183.0" layoutY="181.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
         <rotationAxis>
             <Point3D />
         </rotationAxis>
         <Image url="@../images/cards/fronts/16.png" />
     </ImageView>
-    <ImageView fx:id="goldCardsDeck" fitHeight="98.0" fitWidth="165.0" layoutX="14.0" layoutY="516.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="goldCardsDeck" fitHeight="98.0" fitWidth="165.0" layoutX="14.0" layoutY="424.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/cards/backs/41.png" />
     </ImageView>
-    <ImageView fx:id="visibleGoldCard2" fitHeight="98.0" fitWidth="165.0" layoutX="178.0" layoutY="569.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="visibleGoldCard2" fitHeight="98.0" fitWidth="165.0" layoutX="183.0" layoutY="494.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/cards/backs/102.png" />
     </ImageView>
-    <ImageView fx:id="visibleGoldCard1" fitHeight="98.0" fitWidth="165.0" layoutX="181.0" layoutY="444.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="visibleGoldCard1" fitHeight="98.0" fitWidth="165.0" layoutX="183.0" layoutY="359.0" onMouseClicked="#pickupCard" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/cards/backs/102.png" />
     </ImageView>
-    <ImageView fx:id="commonObjective2" fitHeight="98.0" fitWidth="165.0" layoutX="1272.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="commonObjective2" fitHeight="98.0" fitWidth="165.0" layoutX="249.0" layoutY="742.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/cards/backs/102.png" />
     </ImageView>
-    <ImageView fx:id="commonObjective1" fitHeight="98.0" fitWidth="165.0" layoutX="1272.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="commonObjective1" fitHeight="98.0" fitWidth="165.0" layoutX="45.0" layoutY="742.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/cards/backs/102.png" />
     </ImageView>
-    <VBox fx:id="scoringBoard" layoutX="1285.0" layoutY="424.0" prefHeight="318.0" prefWidth="184.0" />
-    <ImageView fx:id="secretObjective" fitHeight="98.0" fitWidth="165.0" layoutX="181.0" layoutY="742.0" pickOnBounds="true" preserveRatio="true">
+    <VBox fx:id="scoringBoard" layoutX="1293.0" layoutY="514.0" prefHeight="318.0" prefWidth="184.0" />
+    <ImageView fx:id="secretObjective" fitHeight="98.0" fitWidth="165.0" layoutX="136.0" layoutY="624.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@../images/cards/backs/102.png" />
     </ImageView>
-    <Button fx:id="chatButton" layoutX="1252.0" layoutY="778.0" mnemonicParsing="false" onMouseClicked="#toggleChat" text="Chat" />
+    <Button fx:id="chatButton" layoutX="1149.0" layoutY="765.0" mnemonicParsing="false" onMouseClicked="#toggleChat" text="Chat" />
+    <ImageView fitHeight="463.0" fitWidth="240.0" layoutX="1293.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/background/plateau.png" />
+    </ImageView>
+    <ImageView fx:id="redPin" fitHeight="37.0" fitWidth="52.0" layoutX="1343.0" layoutY="439.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/CODEX_pion_red.png" />
+    </ImageView>
+    <ImageView fx:id="bluePin" fitHeight="37.0" fitWidth="52.0" layoutX="1317.0" layoutY="439.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/CODEX_pion_blue.png" />
+    </ImageView>
+    <ImageView fx:id="violetPin" fitHeight="37.0" fitWidth="52.0" layoutX="1340.0" layoutY="450.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/CODEX_pion_violet.png" />
+    </ImageView>
+    <ImageView fx:id="greenPin" fitHeight="37.0" fitWidth="52.0" layoutX="1317.0" layoutY="450.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/CODEX_pion_green.png" />
+    </ImageView>
 </AnchorPane>
